Added icons for database, network, server, and storage. Configured charts.

--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/png" href="/genity.png" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page</title>
+    <title>Genity Dashboard</title>
   </head>
   <body>
     <div id="root"></div>
